add calendar booking

--- a/index.html
+++ b/index.html
@@ -17,15 +17,23 @@
     <!-- Place favicon.ico in the root directory -->
 
     <meta name="theme-color" content="#fafafa">
-
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-
 </head>
 
 <body>
 
-    <h1>Idiomcentric</h1>
+    <nav class="navbar">
+        <ul>
+            <li class="crumb"><a href="https://github.com/conorfennell">Github</a></li>
+        </ul>
+    </nav>
 
+    <div
+        class="calendly-inline-widget"
+        data-url="https://calendly.com/coding-with-conor/60min"
+        style="min-width:320px;height:630px;">
+    </div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async
+    ></script>
 
 </body>
 
