--- a/schedule.html
+++ b/schedule.html
@@ -21,14 +21,29 @@
 </head>
 
 <body class="body">
+    <style type="text/css">
+        .schedule {
+            white-space: pre-wrap;
+            text-align: center;
+            margin-bottom: 0;
+            margin-top: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 
     <nav class="navbar">
         <ul>
-            <li class="crumb"><a href="/">Home</a></li>
+            <li class="crumb"><a href="index.html">Home</a></li>
             <li class="crumb"><a href="https://github.com/conorfennell">Github</a></li>
             <li class="crumb"><a href="schedule.html">Program with Conor</a></li>
         </ul>
     </nav>
+
+    <div class="schedule">SCHEDULE TIME TO PROGRAM WITH CONOR</div>
+    <div class="calendly-inline-widget" data-url="https://calendly.com/coding-with-conor/60min"
+        style="min-width:320px;height:630px;">
+    </div>
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 
 
 </body>
