add styling to navbar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Idiomcentric</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,16 +18,15 @@
 
     <meta name="theme-color" content="#fafafa">
     <link href="index.css" rel="stylesheet">
+    <script type="text/javascript" src="index.js" async></script>
 </head>
 
 <body class="body">
 
     <nav class="navbar">
-        <ul>
-            <li class="crumb"><a href="/">Home</a></li>
-            <li class="crumb"><a href="https://github.com/conorfennell">Github</a></li>
-            <li class="crumb"><a href="schedule.html">Program with Conor</a></li>
-        </ul>
+        <a class="nava" href="index.html">idiomcentric</a> |
+        <a class="nava" href="https://github.com/conorfennell">github</a> |
+        <a class="nava" href="schedule.html">program with conor</a>
     </nav>
 
 
