--- a/schedule.html
+++ b/schedule.html
@@ -32,19 +32,15 @@
     </style>
 
     <nav class="navbar">
-        <ul>
-            <li class="crumb"><a href="index.html">Home</a></li>
-            <li class="crumb"><a href="https://github.com/conorfennell">Github</a></li>
-            <li class="crumb"><a href="schedule.html">Program with Conor</a></li>
-        </ul>
+        <a class="nava" href="index.html">idiomcentric</a> |
+        <a class="nava" href="https://github.com/conorfennell">github</a> |
+        <a class="nava" href="schedule.html">program with conor</a>
     </nav>
 
-    <div class="schedule">SCHEDULE TIME TO PROGRAM WITH CONOR</div>
-    <div class="calendly-inline-widget" data-url="https://calendly.com/coding-with-conor/60min"
-        style="min-width:320px;height:630px;">
+    <!-- <div class="schedule">SCHEDULE TIME TO PROGRAM WITH CONOR</div> -->
+    <div class="calendly-inline-widget" data-url="https://calendly.com/coding-with-conor/60min" style="width:100vh;height:100vh;">
     </div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-
 
 </body>
 
