--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
     <script type="text/javascript" src="index.js" async></script>
 </head>
 
-<body class="body">
-
-    <nav class="navbar">
-        <a class="nava" href="index.html">idiomcentric</a> |
-        <a class="nava" href="https://github.com/conorfennell">github</a> |
-        <a class="nava" href="schedule.html">program with conor</a>
+<body>
+    <nav>
+        <ul>
+            <li><a href="index.html">idiomcentric</a></li> |
+            <li><a href="https://github.com/conorfennell">github</a></li> |
+            <li><a href="schedule.html">program with conor</a></li>
+        </ul>
     </nav>
-
-
 </body>
 
 </html>
