--- a/schedule.html
+++ b/schedule.html
@@ -20,28 +20,17 @@
     <link href="index.css" rel="stylesheet">
 </head>
 
-<body class="body">
-    <style type="text/css">
-        .schedule {
-            white-space: pre-wrap;
-            text-align: center;
-            margin-bottom: 0;
-            margin-top: 0;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
-
-    <nav class="navbar">
-        <a class="nava" href="index.html">idiomcentric</a> |
-        <a class="nava" href="https://github.com/conorfennell">github</a> |
-        <a class="nava" href="schedule.html">program with conor</a>
+<body>
+    <nav>
+        <ul>
+            <li><a href="index.html">idiomcentric</a></li> |
+            <li><a href="https://github.com/conorfennell">github</a></li> |
+            <li><a href="schedule.html">program with conor</a></li>
+        </ul>
     </nav>
-
-    <!-- <div class="schedule">SCHEDULE TIME TO PROGRAM WITH CONOR</div> -->
     <div class="calendly-inline-widget" data-url="https://calendly.com/coding-with-conor/60min" style="width:100vh;height:100vh;">
     </div>
     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-
 </body>
 
 </html>
